# syslog-generator

./: .gitignore  README.md  config.yaml  interactive.py  makefile  pyproject.toml  requirements.txt  setup_bak.py  switch_target.py
generator_venv/: pyvenv.cfg
generator_venv/Scripts/: activate  activate.bat
syslog_generator/: __init__.py  config.py  env.template  es_client.py  es_target.py  generator.py  main.py  senders.py  switch.sh  templates.py
syslog_generator.egg-info/: SOURCES.txt  requires.txt  top_level.txt
